<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <Spinner
        android:id="@+id/bike_spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:entries="@array/add_plant_page_bike_spinner_input"
        android:paddingLeft="@dimen/item_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/upload_button"
            style="@style/TitleTextStyle"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:background="#4DA72A"
            android:padding="@dimen/default_margin"
            android:text="@string/add_plant_page_upload_button"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/wifi" />


    </LinearLayout>

    <Button
        android:id="@+id/btnLed"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@color/darkGray"
        android:text="Allumer les feux"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:onClick="toggleLedButtonClick"/>

    <Button
        android:id="@+id/unlock_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/item_margin"
        android:background="@color/lightGray"
        android:text="@string/add_plant_page_unlock_button"
        android:textColor="@color/white"
        android:textSize="24dp" />

    <Button
        android:id="@+id/lock_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/item_margin"
        android:background="@color/lightGray"
        android:text="@string/add_plant_page_lock_button"
        android:textColor="@color/white"
        android:textSize="24dp" />


    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/add_plant_page_battery_input"
        android:paddingLeft="@dimen/item_margin"
        style="@style/DefaultTextStyle"/>



    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/darkGray"
        android:text="@string/add_plant_page_confirm_button"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:layout_marginTop="@dimen/item_margin"/>


</LinearLayout>